Fixed hero section background spacing

--- a/src/pages/mainpage/MainPage.module.scss
+++ b/src/pages/mainpage/MainPage.module.scss
@@ -347,7 +347,8 @@
             background: url("./../../assets/images/elipse.png");
             background-size: 150%;
             background-position: center center;
-            margin: -1rem;
+            margin: -2rem;
+            padding: 1rem;
 
             .yellowRing {
                 display: none;
